--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
      <meta charset="utf-8">
-     <title>doc</title>
+     <title>checkers-float</title>
+     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
      <link rel="stylesheet" type="text/css" href="styles/normalize.css"> <!--2-st prority-->
      <link rel="stylesheet" type="text/css" href="styles/style.css"> <!--1-st prority-->
 </head>
